Updated images path in index file

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       }
 
       .banner {
-        background-image: url("./images/resort.jpg");
+        background-image: url("resort.jpg");
         height: 400px;
         background-repeat: no-repeat;
         background-size: cover;
@@ -201,7 +201,7 @@
           <div class="banner-strip">
             <div class="logo">
               <div class="image">
-                <img src="./images/map-icon.png" alt="logo" />
+                <img src="map-icon.png" alt="logo" />
               </div>
               <div class="text">
                 <span class="bold">Property</span> Photos<sup>&trade;</sup>
@@ -234,7 +234,7 @@
               <tbody>
                 <tr>
                   <td>
-                    <img src="./images/property.jpg" alt="" />
+                    <img src="property.jpg" alt="" />
                     <p class="property-name">Property Name</p>
                   </td>
                   <td>Photography</td>
@@ -242,7 +242,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <img src="./images/property.jpg" alt="" />
+                    <img src="property.jpg" alt="" />
                     <p class="property-name">Property Name</p>
                   </td>
                   <td>Photography</td>
@@ -250,7 +250,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <img src="./images/property.jpg" alt="" />
+                    <img src="property.jpg" alt="" />
                     <p class="property-name">Property Name</p>
                   </td>
                   <td>Photography</td>
