--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         max-width: 600px;
         width: 600px;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        background-color: #d3d3d3;
       }
 
       .banner-strip {
-        background-color: chocolate;
+        background-color: #d2691e;
         height: 30px;
         position: relative;
         z-index: 1;
@@ -34,7 +35,7 @@
         width: 50%;
         height: 50px;
         display: block;
-        background-color: rgb(78, 75, 75);
+        background-color: #4e4b4b;
         margin: 0 auto;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
@@ -67,7 +68,7 @@
       }
 
       .banner {
-        background-image: url("resort.jpg");
+        background-image: url("./images/resort.jpg");
         height: 400px;
         background-repeat: no-repeat;
         background-size: cover;
@@ -90,7 +91,7 @@
         top: 40%;
         left: 50%;
         transform: translate(-50%);
-        color: rgb(78, 75, 75);
+        color: #4e4b4b;
         text-align: center;
       }
 
@@ -105,7 +106,9 @@
       }
 
       .main {
+        background-color: #ffffff;
         padding: 20px;
+        color: #4e4b4b;
       }
 
       .button-block {
@@ -116,7 +119,7 @@
       .button-block button {
         color: #ffffff;
         border-radius: 40px;
-        background-color: chocolate;
+        background-color: #d2691e;
         font-size: 18px;
         border: 0;
         padding: 10px 30px;
@@ -132,8 +135,9 @@
 
       .styled-table thead tr {
         background-color: #e4e4e4;
-        color: rgb(78, 75, 75);
+        color: #4e4b4b;
         text-align: left;
+        font-weight: bold;
       }
 
       .styled-table th,
@@ -164,8 +168,8 @@
       .footer {
         text-align: center;
         padding: 10px 0px 30px 10px;
-        background-color: grey;
-        color: white;
+        background-color: #808080;
+        color: #ffffff;
       }
 
       .footer table {
@@ -201,7 +205,7 @@
           <div class="banner-strip">
             <div class="logo">
               <div class="image">
-                <img src="map-icon.png" alt="logo" />
+                <img src="./images/map-icon.png" alt="logo" />
               </div>
               <div class="text">
                 <span class="bold">Property</span> Photos<sup>&trade;</sup>
@@ -234,7 +238,7 @@
               <tbody>
                 <tr>
                   <td>
-                    <img src="property.jpg" alt="" />
+                    <img src="./images/property.jpg" alt="" />
                     <p class="property-name">Property Name</p>
                   </td>
                   <td>Photography</td>
@@ -242,7 +246,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <img src="property.jpg" alt="" />
+                    <img src="./images/property.jpg" alt="" />
                     <p class="property-name">Property Name</p>
                   </td>
                   <td>Photography</td>
@@ -250,7 +254,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <img src="property.jpg" alt="" />
+                    <img src="./images/property.jpg" alt="" />
                     <p class="property-name">Property Name</p>
                   </td>
                   <td>Photography</td>
