--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             <td>
               <table border="0" cellpadding="0" cellspacing="0" align="center" width="600">
                 <tr>
+                  <td bgcolor="#d2691e"></td>
                   <td bgcolor="#d2691e">
                     <table border="0" cellpadding="0" cellspacing="0" width="300" align="center">
                       <tr>
@@ -142,6 +143,7 @@
                       </tr>
                     </table>
                   </td>
+                  <td bgcolor="#d2691e"></td>
                 </tr>
               </table>
             </td>
