formatted some code

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html
-  PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html lang="en" xmlns:v="urn:schemas-microsoft-com:vml">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <title>Property Photos&trade;</title>
 
-  <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+  <meta http-equiv="content-ype" content="text/html" charset="UTF-8" />
   <meta name="viewport" content="width=device-width">
   <style type="text/css">
-
     #outlook a {
       padding: 0;
     }
