--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
   </style>
 </head>
 
-<body>
-  <table border="0" align="center" cellpadding="0" cellspacing="0" width="600">
+<body style="background-color: #ffffff;">
+  <table border="0" align="center" cellpadding="0" cellspacing="0" width="600" bgcolor="#ffffff">
     <tr>
       <td bgcolor="#ffffff" align="center">
         <table border="0" align="center" cellpadding="0" cellspacing="0" width="100%" class="wrapper">
